--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <p>La liste des marchandises</p>
     <p>La liste des marchandises</p>
     <p>La liste des marchandises</p>
+    <p>La liste des marchandises</p>
+    <p>La liste des marchandises</p>
 
 </body>
 </html>
