--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <p>La liste des marchandises</p>
     <p>La liste des marchandises</p>
     <p>La liste des marchandises</p>
+    <p>La liste des marchandises avec montant</p>
 
 </body>
 </html>
