--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <p>La liste des marchandises</p>
     <p>La liste des marchandises</p>
     <p>La liste des marchandises avec montant</p>
+    <p> <input type="button" value="">  </p>
 
 </body>
 </html>
