--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
     <p>La liste des marchandises</p>
     <p>La liste des marchandises avec montant</p>
     <p> <input type="button" value="">  </p>
+   
+   <table>
+    
+   </table>
 
 </body>
 </html>
